[tool.poetry]
name = "aiormq"
version = "6.9.0"
description = "Pure python AMQP asynchronous client library"
authors = ["Dmitry Orlov <me@mosquito.su>"]
readme = "README.rst"
license = "Apache-2.0"
keywords=["rabbitmq", "asyncio", "amqp", "amqp 0.9.1", "driver", "pamqp"]
homepage = "https://github.com/mosquito/aiormq"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Internet",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Clustering",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Microsoft",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: Implementation :: CPython",
]
packages = [{ include = "aiormq" }]

[tool.poetry.urls]
"Source" = "https://github.com/mosquito/aiormq"
"Tracker" = "https://github.com/mosquito/aiormq/issues"
"Documentation" = "https://github.com/mosquito/aiormq/blob/master/README.rst"

[tool.poetry.dependencies]
python = "^3.9"
pamqp = "3.3.0"
yarl = [{ version = '*'}]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
coverage = "^6.5.0"
coveralls = "^3.3.1"
pylama = "^8.4.1"
pytest-cov = "^4.0.0"
collective-checkdocs = "^0.2"
mypy = "^0.991"
pytest-rst = "^0.0.7"
types-setuptools = "^65.6.0.2"
aiomisc-pytest = "^1.1.1"
setuptools = "^69.0.3"

[tool.poetry.group.uvloop.dependencies]
uvloop = ["^0.21"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
follow_imports = "silent"
no_implicit_reexport = true
strict_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = false
files = "aiormq"
