[project]
name = "aiormq"
version = "7.0.0"
description = "Pure python AMQP asynchronous client library"
authors = [{ name = "Dmitry Orlov", email = "orlovdl@gmail.com" }]
requires-python = "~=3.10"
readme = "README.rst"
license = "Apache-2.0"
keywords = [
    "rabbitmq",
    "asyncio",
    "amqp",
    "amqp 0.9.1",
    "driver",
    "pamqp",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Internet",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Clustering",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Microsoft",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "pamqp==3.3.0",
    "yarl",
]

[project.urls]
Homepage = "https://github.com/mosquito/aiormq"
Source = "https://github.com/mosquito/aiormq"
Tracker = "https://github.com/mosquito/aiormq/issues"
Documentation = "https://github.com/mosquito/aiormq/blob/master/README.rst"

[dependency-groups]
dev = [
    "pytest~=8.4",
    "coverage~=6.5",
    "coveralls>=3.3.1,<4",
    "pylama>=8.4.1,<9",
    "pytest-cov>=4.0.0,<5",
    "collective-checkdocs>=0.2,<0.3",
    "mypy~=1.18",
    "pytest-rst>=0.1,<0.2",
    "types-setuptools~=80.9",
    "aiomisc-pytest~=1.1",
    "setuptools~=80.9",
    "ruff>=0.14.1,<0.15",
]
uvloop = ["uvloop>=0.22,<0.23"]

[tool.uv]
default-groups = [
    "dev",
    "uvloop",
]

[tool.hatch.build.targets.sdist]
include = ["aiormq"]

[tool.hatch.build.targets.wheel]
include = ["aiormq"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
follow_imports = "silent"
no_implicit_reexport = true
strict_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = false
files = "aiormq"

[tool.ruff]
target-version = "py310"
line-length = 119

[tool.ruff.lint]
select = [
    "B", "C4", "DTZ", "E", "ERA", "F", "G", "I", "N", "PERF", "PTH", "RUF", "SIM", "T20", "TCH", "TID", "UP", "W"
]
extend-ignore = [
    "B008", "B019", "C408", "E203", "ERA001", "PERF401", "PERF403", "RUF005", "RUF013", "SIM117",
    "T20", "TC002", "TID251", "UP035", "N818", "TC001"
]
exclude = [".git", ".venv", "__pycache__", "build", "dist"]

[tool.ruff.lint.isort]
combine-as-imports = true
