[project]
name = "aiormq"
version = "6.9.2"
description = "Pure python AMQP asynchronous client library"
authors = [{ name = "Dmitry Orlov", email = "me@mosquito.su" }]
requires-python = ">=3.10,<4"
readme = "README.rst"
license = "Apache-2.0"
keywords = [
    "rabbitmq",
    "asyncio",
    "amqp",
    "amqp 0.9.1",
    "driver",
    "pamqp",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Internet",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Clustering",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Microsoft",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "pamqp==3.3.0",
    "yarl",
]

[project.urls]
Homepage = "https://github.com/mosquito/aiormq"
Source = "https://github.com/mosquito/aiormq"
Tracker = "https://github.com/mosquito/aiormq/issues"
Documentation = "https://github.com/mosquito/aiormq/blob/master/README.rst"

[dependency-groups]
dev = [
    "pytest>=8.4,<9",
    "coverage>=6.5,<7",
    "coveralls>=3.3.1,<4",
    "ruff",
    "pytest-cov>=4.0.0,<5",
    "collective-checkdocs>=0.2,<0.3",
    "mypy>=1.18,<2",
    "pytest-rst>=0.1,<0.2",
    "types-setuptools>=80.9,<81",
    "aiomisc-pytest>=1.1,<2",
    "setuptools>=80.9,<81",
]
uvloop = ["uvloop>=0.22,<0.23"]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = ["aiormq"]
module-root = ""
source-include = ["tests/**"]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
follow_imports = "silent"
no_implicit_reexport = true
strict_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = false
files = "aiormq"

[tool.pytest.ini_options]
addopts = "-p no:asyncio"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 80
exclude = [
    ".git",
    ".tox",
    ".venv",
    "build",
    "dist",
    "env",
]

[tool.ruff.lint]
select = ["E", "W", "F", "C90"]
ignore = ["C901"]
